[package]
name = "mongo-beta"
version = "0.1.0"
authors = ["Dominic Petrick <dompetrick@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "2.0.0-beta.1", features = ["bson-chrono-0_4", "bson-uuid-0_8"] }